test/types/records/split-init/split-init-oops1.good
split-init-oops1.chpl:5: In function 'test':
split-init-oops1.chpl:6: error: variable 'a' is not initialized and has no type
split-init-oops1.chpl:8: note: 'a' is used here before it is initialized
